# End-to-End-ML-Project

./: .gitignore  Dockerfile  README.md  config.py  pyproject.toml
.github/workflows/: docker-push.yml
data/: cleaned_student_habits_performance.csv  final_encoded_data.csv  scaler.pkl  student_score_model.pkl
models/: best_model.pkl  scaler.pkl
notebooks/: EDA.ipynb  cleaning.ipynb  feature_engineering.ipynb  feature_selection.ipynb  model_traning.ipynb
src/pipeline/: ETLFeaturePipeline.py
src/step/: a_ingest.py  b_cleaning.py  c_feature_engineering.py  d_features_selection.py  e_model_training.py  f_predict.py
src/web/: api.py  schemas.py
