[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "academic-performance-predictor"
version = "0.1.0"

dependencies = [
    "joblib>=1.3.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    "matplotlib",
    "seaborn",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
    "debugpy"
]
requires-python = ">=3.8"
authors = [
  {name = "Mohiuddin Ahmmed", email = "topumohiuddin3@gmail.com"},
]

description = "A machine learning project to predict academic performance based on various factors."
readme = "README.md"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[tool.hatch.build.targets.wheel]
packages = ["."]